--- a/src/main/resources/.env.format
+++ b/src/main/resources/.env.format
@@ -1,4 +1,4 @@
 MONGO_DATABASE="movie-api-db"
 MONGO_USER="ashanp"
-MONGO_PASSWORD="askMongo2023"
+MONGO_PASSWORD="xxxxxx"
 MONGO_CLUSTER="cluster0.sarnkdr"
